src/test/wacc/valid/pairs/createPair03.wacc
# create a pair (int, char)

# Output:

# Program:

begin
  pair(int, char) p = newpair(10, 'a')
end
